--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,27 @@
   <title>ACU</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Ahiru's Creative Universe (ACU) - Handcrafted artisan products, unique home decor, personalized dolls, and custom stationery made with love." />
+  <meta name="keywords"
+    content="handcrafted products, artisan gifts, home decor, personalized dolls, custom stationery, unique crafts, ACU, Ahiru's Creative Universe" />
   <meta name="referrer" content="no-referrer-when-downgrade" />
   <base href="/">
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Ahiru's Creative Universe",
+      "url": "https://grand-sorbet-95e490.netlify.app/",
+      "logo": "https://grand-sorbet-95e490.netlify.app/assets/images/avatar/ahiru.webp",
+      "description": "Handcrafted artisan products made just for you.",
+      "sameAs": [
+        "https://www.facebook.com/AshwiniAbhangDoodles",
+        "https://www.instagram.com/ashwiniabhang/",
+        "https://www.linkedin.com/company/aadoodles/"
+      ]
+    }
+  </script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
