SSR seo changes

--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,25 @@
 <html lang="en">
 
 <head>
-  <title>ACU</title>
+  <title>ACU - Ahiru's Creative Universe | Handcrafted Artisan Products</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="Ahiru's Creative Universe (ACU) - Handcrafted artisan products, unique home decor, personalized dolls, and custom stationery made with love." />
+    content="Experience Ahiru's Creative Universe (ACU) for unique handcrafted products, artisan gifts, home decor, personalized dolls, and custom stationery made with love." />
   <meta name="keywords"
-    content="handcrafted products, artisan gifts, home decor, personalized dolls, custom stationery, unique crafts, ACU, Ahiru's Creative Universe" />
+    content="ACU, Ahiru's Creative Universe, handcrafted products, artisan gifts, home decor, personalized dolls, custom stationery, unique crafts, handmade dolls, artisan universe" />
+  <meta property="og:title" content="Ahiru's Creative Universe - Handcrafted with Love" />
+  <meta property="og:description"
+    content="Discover unique artisan products, handcrafted gifts, and personalized dolls at Ahiru's Creative Universe." />
+  <meta property="og:image" content="https://grand-sorbet-95e490.netlify.app/assets/images/avatar/ahiru.webp" />
+  <meta property="og:url" content="https://grand-sorbet-95e490.netlify.app/" />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Ahiru's Creative Universe - Handcrafted with Love" />
+  <meta name="twitter:description" content="Discover unique artisan products and handcrafted gifts at ACU." />
+  <meta name="twitter:image" content="https://grand-sorbet-95e490.netlify.app/assets/images/avatar/ahiru.webp" />
   <meta name="referrer" content="no-referrer-when-downgrade" />
+  <link rel="canonical" href="https://grand-sorbet-95e490.netlify.app/" />
   <base href="/">
   <script type="application/ld+json">
     {
