SSR specific changes & seo changes

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>ACU - Ahiru's Creative Universe | Handcrafted Artisan Products</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico" />
   <meta name="description"
     content="Experience Ahiru's Creative Universe (ACU) for unique handcrafted products, artisan gifts, home decor, personalized dolls, and custom stationery made with love." />
   <meta name="keywords"
@@ -12,13 +13,13 @@
   <meta property="og:title" content="Ahiru's Creative Universe - Handcrafted with Love" />
   <meta property="og:description"
     content="Discover unique artisan products, handcrafted gifts, and personalized dolls at Ahiru's Creative Universe." />
-  <meta property="og:image" content="https://grand-sorbet-95e490.netlify.app/assets/images/avatar/ahiru.webp" />
+  <meta property="og:image" content="https://grand-sorbet-95e490.netlify.app/assets/images/avatars/ahiru.webp" />
   <meta property="og:url" content="https://grand-sorbet-95e490.netlify.app/" />
   <meta property="og:type" content="website" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Ahiru's Creative Universe - Handcrafted with Love" />
   <meta name="twitter:description" content="Discover unique artisan products and handcrafted gifts at ACU." />
-  <meta name="twitter:image" content="https://grand-sorbet-95e490.netlify.app/assets/images/avatar/ahiru.webp" />
+  <meta name="twitter:image" content="https://grand-sorbet-95e490.netlify.app/assets/images/avatars/ahiru.webp" />
   <meta name="referrer" content="no-referrer-when-downgrade" />
   <link rel="canonical" href="https://grand-sorbet-95e490.netlify.app/" />
   <base href="/">
@@ -28,7 +29,7 @@
       "@type": "Organization",
       "name": "Ahiru's Creative Universe",
       "url": "https://grand-sorbet-95e490.netlify.app/",
-      "logo": "https://grand-sorbet-95e490.netlify.app/assets/images/avatar/ahiru.webp",
+      "logo": "https://grand-sorbet-95e490.netlify.app/assets/images/avatars/ahiru.webp",
       "description": "Handcrafted artisan products made just for you.",
       "sameAs": [
         "https://www.facebook.com/AshwiniAbhangDoodles",
@@ -39,7 +40,15 @@
   </script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="preload" as="style"
+    href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Outfit:wght@300;400;500;600;700&family=Playfair+Display:ital,wght@0,400;0,600;1,400&display=swap">
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Outfit:wght@300;400;500;600;700&family=Playfair+Display:ital,wght@0,400;0,600;1,400&display=swap"
+    media="print" onload="this.media='all'">
+  <noscript>
+    <link rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Outfit:wght@300;400;500;600;700&family=Playfair+Display:ital,wght@0,400;0,600;1,400&display=swap">
+  </noscript>
   <link rel="preload" as="video" href="/assets/images/acu_hero_final_2.mp4" type="video/mp4" fetchpriority="high">
   <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
